--- a/layout.html
+++ b/layout.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>cs290-Assignment2</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 	</body>
