Added table to layout.html

--- a/layout.html
+++ b/layout.html
@@ -6,5 +6,63 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+	  <table>
+      <caption>A Seemingly RandomTable</caption>
+	  <thead></thead>
+	  <tr>
+	    <th></th>
+	    <th>Appetizers</th>
+	    <th>Salads</th>
+	    <th>Soups</th>
+	    <th>Pastas</th>
+	    <th>Meats</th>
+	  </tr>
+	  <tr>
+	    <th>Sweet</th>
+	    <td>Fruit</td>
+	    <td>Cranberry</td>
+	    <td>Melon</td>
+	    <td>Apple</td>
+	    <td>Pork</td>
+	</tr>
+    <tr>
+	  <th>Salty</th>
+	  <td>Nuts</td>
+	  <td>Caesar</td>
+	  <td>Noodle</td>
+	  <td>Pesto</td>
+	  <td>Bacon</td>
+	 </tr>
+	 <tr>
+	  <th>Cheese</th>
+	  <td>Canape</td>
+	  <td>Chef</td>
+	  <td>Broccoli</td>
+	  <td>Mac'n Cheese</td>
+	  <td>Burger</td>
+	 </tr>
+	 <tr>
+	  <th>Savory</th>
+	  <td>Salami</td>
+	  <td>Kale</td>
+	  <td>Beef</td>
+	  <td>Spaghetti</td>
+	  <td>Beef</td>
+	 </tr>
+	 <tr>
+	  <th>Spicy</th>
+	  <td>Peppers</td>
+	  <td>Taco</td>
+	  <td>Hot</td>
+	  <td>Tortilla</td>
+	  <td>Chorizo</td>
+	 </tr>
+	 <tfoot>
+	   <tr>
+	     <td colspan="2">My left foot</td>
+	     <td colspan="4">David Beckham's money maker</td>
+	   </tr>
+	 </tfoot>
+  </table>
 	</body>
 </html>
