--- a/layout.html
+++ b/layout.html
@@ -64,5 +64,14 @@
 	   </tr>
 	 </tfoot>
   </table>
+  
+    <dl>
+    <dt>Transportation</dt>
+	<dd>Walk, Bike, Drive, Ride</dd>
+    <dt>Entertainment</dt>
+    <dd>Music, Sports, Film, Television</dd>
+    <dt>Education</dt>
+    <dd>Reading, Writing, Math, Science</dd>
+  </dl>
 	</body>
 </html>
