Added div to layout.html. validates

--- a/layout.html
+++ b/layout.html
@@ -65,7 +65,7 @@
 	 </tfoot>
   </table>
   
-    <dl>
+  <dl>
     <dt>Transportation</dt>
 	<dd>Walk, Bike, Drive, Ride</dd>
     <dt>Entertainment</dt>
@@ -73,5 +73,9 @@
     <dt>Education</dt>
     <dd>Reading, Writing, Math, Science</dd>
   </dl>
+  
+  <div class="outer">
+    <div class="inner"><p>Content</p></div>
+  </div>
 	</body>
 </html>
