Added image to layout.html

--- a/layout.html
+++ b/layout.html
@@ -78,6 +78,7 @@
     <div class="inner"><p>Content</p></div>
   </div>
   
+  <img src="Yellow-pin.png" alt="yellow pin">
   <p>
   Lorem ipsum dolor sit amet, fugit congue nam an. Dicit utroque eu nam, eu nulla 
   utamur vix. Nostro lucilius deserunt sed an, cum detraxit definiebas eu, primis 
