Addedpost form to layout.html

--- a/layout.html
+++ b/layout.html
@@ -79,6 +79,39 @@
   </div>
   
   <img src="Yellow-pin.png" alt="yellow pin">
+  
+  <h2>A POST Form</h2>
+  <form action="http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method="post">
+    <p>
+	  <label for="text_input">Text</label>
+	  <input type="text" id="text_input" name="text_input" />
+	</p>
+	<p>
+	  <label for="numerical_input">Number</label>
+	  <input type="number" min="1" max="5" id="numerical_input" name="numerical_input" />
+	</p>
+	<p>
+	  <label for="password_input">Password</label>
+	  <input type="password" id="password_input" name="password_input" />
+	</p>
+	<p>
+	  <label for="c1">
+	    <input type="radio" name="candy" id="c1" value="Snickers" checked>Snickers
+      </label>
+    </p>	
+    <p>	
+	  <label for="c2">
+	    <input type="radio" name="candy" id="c2" value="Skittles">Skittles
+	  </label>
+	</p>
+    <p> 	
+	  <label for="c3">
+	    <input type="radio" name="candy" id="c3" value="Mentos">Mentos
+      </label>
+	</p>
+	<button type="submit">Submit form</button>
+  </form>
+  
   <p>
   Lorem ipsum dolor sit amet, fugit congue nam an. Dicit utroque eu nam, eu nulla 
   utamur vix. Nostro lucilius deserunt sed an, cum detraxit definiebas eu, primis 
