Added styles to forms and to list

--- a/layout.html
+++ b/layout.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 	  <table>
-      <caption>A Seemingly RandomTable</caption>
+      <caption>A Caption for the Table</caption>
 	  <thead></thead>
 	  <tr>
 	    <th></th>
